--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
 
     compile 'com.jakewharton.timber:timber:2.4.2'
 
-    compile project(':pickup')
+    compile project(':gallery')
 }
