--- a/gallery/src/main/AndroidManifest.xml
+++ b/gallery/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hzj.pickup">
+    package="com.hzj.gallery">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -9,10 +9,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
 
-        <activity android:name=".pickup.PictureFolderActivity" />
-        <activity android:name=".pickup.PictureActivity" />
+        <activity android:name="com.hzj.gallery.pickup.PictureFolderActivity" />
+        <activity android:name="com.hzj.gallery.pickup.PictureActivity" />
 
-        <activity android:name=".browse.BrowseImageActivity" />
+        <activity android:name="com.hzj.gallery.browse.BrowseImageActivity" />
     </application>
 
 </manifest>
